--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 @font-face {
   font-family: "EkMukta";
-  src: url(images/ekmukta-bold.ttf);
+  src: url(images/EkMukta-Bold.ttf);
 }
 
 /* ===================================== */
